21 October 2008: Wouter
	- fix update-anchors.sh, so it does not report different RR order
	  as an update.  Sorts the keys in the file.  Updated copyright.

20 October 2008: Wouter
	- quench a log message that is debug only.
	- iana portlist updated.
	- do not query bogus nameservers.  It is like nameservers that have 
	  the NS or A or AAAA record bogus are listed as donotquery.
	- if server selection is faced with only bad choices, it will
	  attempt to get more options to be fetched.
	- changed bogus-ttl default value from 900 to 60 seconds.
	  In anticipation that operator caused failures are more likely than
	  actual attacks at this time.  And thus repeated validation helps
	  the operators get the problem fixed sooner.  It makes validation
	  failures go away sooner (60 seconds after the zone is fixed).
	  Also it is likely to try different nameserver targets every minute,
	  so that if a zone is bad on one server but not another, it is 
	  likely to pick up the 'correct' one after a couple minutes,
	  and if the TTL is big enough that solves validation for the zone.
	- fixup unbound-control compilation on windows.

17 October 2008: Wouter
	- port Leopard/G5: fixup type conversion size_t/uint32.
	  please ranlib, stop file without symbols warning.
	- harden referral path now also validates the root after priming.
	  It looks up the root NS authoritatively as well as the root servers
	  and attemps to validate the entries.

16 October 2008: Wouter
	- Fixup negative TTL values appearing (reported by Attila Nagy).

15 October 2008: Wouter
	- better documentation for 0x20; remove fallback TODO, it is done.
	- harden-referral-path feature includes A, AAAA queries for glue,
	  as well as very careful NS caching (only when doing NS query).
	  A, AAAA use the delegation from the NS-query.

14 October 2008: Wouter
	- fwd_three.tpkg test was flaky.  If the three requests hit the
	  wrong threads by chance (or bad OS) then the test would fail.